5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1798_2568.log
== TEST (2019-06-10 15:16:01) 
-- CODE:
n = int(input(":"))
j = 2
print(j * n * "*")
for i in range((n-1),(0,-1):
	print(n * "*" + j * "o" + n * "*")
	j = j + 2
					
				

-- ERROR:
File "XXXX", line 4
    for i in range((n-1),(0,-1):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:16:25) 
-- CODE:
n = int(input(":"))
j = 2
print(j * n * "*")
for i in range((n-1),0,-1):
	print(n * "*" + j * "o" + n * "*")
	j = j + 2
					
				

-- OUTPUT:
**********************
***********oo***********
***********oooo***********
***********oooooo***********
***********oooooooo***********
***********oooooooooo***********
***********oooooooooooo***********
***********oooooooooooooo***********
***********oooooooooooooooo***********
***********oooooooooooooooooo***********
***********oooooooooooooooooooo***********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:16:47) 
-- CODE:
n = int(input(":"))
j = 2
print(j * n * "*")
for i in range((n-1),0,-1):
	print(n * "*" + j * "o" + n * "*")
	j = j + 2
					
				

-- EXECUTION TIME:
0.549577
-- TEST CASE 1:
---- input:
11
---- correct output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
---- user output:
**********************
***********oo***********
***********oooo***********
***********oooooo***********
***********oooooooo***********
***********oooooooooo***********
***********oooooooooooo***********
***********oooooooooooooo***********
***********oooooooooooooooo***********
***********oooooooooooooooooo***********
***********oooooooooooooooooooo***********
-- TEST CASE 2:
---- input:
19
---- correct output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
---- user output:
**************************************
*******************oo*******************
*******************oooo*******************
*******************oooooo*******************
*******************oooooooo*******************
*******************oooooooooo*******************
*******************oooooooooooo*******************
*******************oooooooooooooo*******************
*******************oooooooooooooooo*******************
*******************oooooooooooooooooo*******************
*******************oooooooooooooooooooo*******************
*******************oooooooooooooooooooooo*******************
*******************oooooooooooooooooooooooo*******************
*******************oooooooooooooooooooooooooo*******************
*******************oooooooooooooooooooooooooooo*******************
*******************oooooooooooooooooooooooooooooo*******************
*******************oooooooooooooooooooooooooooooooo*******************
*******************oooooooooooooooooooooooooooooooooo************
-- TEST CASE 3:
---- input:
26
---- correct output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo********
*******oooooooooooooooooooooooooooooooooooooo*******
******oooooooooooooooooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooooooooooooooooo*
---- user output:
****************************************************
**************************oo**************************
**************************oooo**************************
**************************oooooo**************************
**************************oooooooo**************************
**************************oooooooooo**************************
**************************oooooooooooo**************************
**************************oooooooooooooo**************************
**************************oooooooooooooooo**************************
**************************oooooooooooooooooo**************************
**************************oooooooooooooooooooo**************************
**************************oooooooooooooooooooooo**************************
**************************oooooooooooooooooooooooo**************************
**************************oooooooooooooooooooooooooo**************************
**************************oooooooooooooooooooooooooooo**********************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:17:14) 
-- CODE:
n = int(input(":"))
j = 2
print(2 * n * "*")
for i in range((n-1),0,-1):
	print(n * "*" + j * "o" + n * "*")
	j = j + 2
					
				

-- OUTPUT:
**********************
***********oo***********
***********oooo***********
***********oooooo***********
***********oooooooo***********
***********oooooooooo***********
***********oooooooooooo***********
***********oooooooooooooo***********
***********oooooooooooooooo***********
***********oooooooooooooooooo***********
***********oooooooooooooooooooo***********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:17:20) 
-- CODE:
n = int(input(":"))
j = 2
print(2 * n * "*")
for i in range((n-1),0,-1):
	print(n * "*" + j * "o" + n * "*")
	j = j + 2
					
				

-- EXECUTION TIME:
0.679638
-- TEST CASE 1:
---- input:
11
---- correct output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
---- user output:
**********************
***********oo***********
***********oooo***********
***********oooooo***********
***********oooooooo***********
***********oooooooooo***********
***********oooooooooooo***********
***********oooooooooooooo***********
***********oooooooooooooooo***********
***********oooooooooooooooooo***********
***********oooooooooooooooooooo***********
-- TEST CASE 2:
---- input:
19
---- correct output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
---- user output:
**************************************
*******************oo*******************
*******************oooo*******************
*******************oooooo*******************
*******************oooooooo*******************
*******************oooooooooo*******************
*******************oooooooooooo*******************
*******************oooooooooooooo*******************
*******************oooooooooooooooo*******************
*******************oooooooooooooooooo*******************
*******************oooooooooooooooooooo*******************
*******************oooooooooooooooooooooo*******************
*******************oooooooooooooooooooooooo*******************
*******************oooooooooooooooooooooooooo*******************
*******************oooooooooooooooooooooooooooo*******************
*******************oooooooooooooooooooooooooooooo*******************
*******************oooooooooooooooooooooooooooooooo*******************
*******************oooooooooooooooooooooooooooooooooo************
-- TEST CASE 3:
---- input:
26
---- correct output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo********
*******oooooooooooooooooooooooooooooooooooooo*******
******oooooooooooooooooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooooooooooooooooo*
---- user output:
****************************************************
**************************oo**************************
**************************oooo**************************
**************************oooooo**************************
**************************oooooooo**************************
**************************oooooooooo**************************
**************************oooooooooooo**************************
**************************oooooooooooooo**************************
**************************oooooooooooooooo**************************
**************************oooooooooooooooooo**************************
**************************oooooooooooooooooooo**************************
**************************oooooooooooooooooooooo**************************
**************************oooooooooooooooooooooooo**************************
**************************oooooooooooooooooooooooooo**************************
**************************oooooooooooooooooooooooooooo**********************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:17:35) 
-- CODE:
n = int(input(":"))
j = 2
print(2 * n * "*")
for i in range((n-1),0,-1):
	print(n * "*" + j * "o" + n * "*")
	j = j + 2
					
				

-- OUTPUT:
**********************
***********oo***********
***********oooo***********
***********oooooo***********
***********oooooooo***********
***********oooooooooo***********
***********oooooooooooo***********
***********oooooooooooooo***********
***********oooooooooooooooo***********
***********oooooooooooooooooo***********
***********oooooooooooooooooooo***********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:18:15) 
-- CODE:
n = int(input(":"))
j = 2
print(2 * n * "*")
for i in range((n-1),0,1):
	print(n * "*" + j * "o" + n * "*")
	j = j + 2
					
				

-- OUTPUT:
**********************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:18:50) 
-- CODE:
n = int(input(":"))
j = 2
print(2 * n * "*")
for i in range((n-1),0,-1):
	print(n * "*" + j * "o" + n * "*")
	j = j + 2
					
				

-- OUTPUT:
**********************
***********oo***********
***********oooo***********
***********oooooo***********
***********oooooooo***********
***********oooooooooo***********
***********oooooooooooo***********
***********oooooooooooooo***********
***********oooooooooooooooo***********
***********oooooooooooooooooo***********
***********oooooooooooooooooooo***********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:21:41) 
-- CODE:
n = int(input(":"))
j = 2
print(2 * n * "*")
for i in range((n-1),0,-1):
	print(i * "*" + j * "o" + i * "*")
	j = j + 2
					
				

-- OUTPUT:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:21:50) 
-- CODE:
n = int(input(":"))
j = 2
print(2 * n * "*")
for i in range((n-1),0,-1):
	print(i * "*" + j * "o" + i * "*")
	j = j + 2
					
				

-- EXECUTION TIME:
0.636433
-- TEST CASE 1:
---- input:
11
---- correct output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
---- user output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
-- TEST CASE 2:
---- input:
19
---- correct output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
---- user output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
-- TEST CASE 3:
---- input:
26
---- correct output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo********
*******oooooooooooooooooooooooooooooooooooooo*******
******oooooooooooooooooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooooooooooooooooo*
---- user output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo**
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
